--- a/AndroidApp/app/build.gradle
+++ b/AndroidApp/app/build.gradle
@@ -50,8 +50,11 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.google.android.material:material:1.4.0'
     def work_version = "2.7.1"
     def lifecycle_version = "2.5.1"
+    def camerax_version = "1.1.0"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
@@ -71,6 +74,11 @@ dependencies {
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation  "androidx.datastore:datastore-core:1.0.0"
     implementation  "com.google.protobuf:protobuf-javalite:3.18.0"
+    implementation "androidx.camera:camera-core:${camerax_version}"
+    implementation "androidx.camera:camera-camera2:${camerax_version}"
+    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+    implementation "androidx.camera:camera-view:${camerax_version}"
+    implementation("io.coil-kt:coil-compose:2.2.2")
 
     implementation project(path: ':libapi')
 
