--- a/WebApp/weather-cam-web-app/package.json
+++ b/WebApp/weather-cam-web-app/package.json
@@ -55,6 +55,7 @@
     "start-server-and-test": "^1.14.0",
     "typescript": "~4.7.4",
     "vite": "^3.0.9",
+    "vite-plugin-pwa": "^0.13.3",
     "vite-plugin-vuetify": "^1.0.0-alpha.12",
     "vitest": "^0.23.0",
     "vue-cli-plugin-pinia": "~0.1.5",
