--- a/AndroidApp/libapi/build.gradle
+++ b/AndroidApp/libapi/build.gradle
@@ -1,8 +1,9 @@
 group 'org.openapitools'
 version '1.0.0'
 
+
 buildscript {
-    ext.kotlin_version = '1.7.20'
+    ext.retrofitVersion = '2.9.0'
 
     repositories {
         maven { url "https://repo1.maven.org/maven2" }
@@ -16,9 +17,6 @@ buildscript {
 apply plugin: 'kotlin'
 apply plugin: 'kotlinx-serialization'
 
-//repositories {
-//    maven { url "https://repo1.maven.org/maven2" }
-//}
 
 test {
     useJUnitPlatform()
@@ -28,12 +26,11 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1"
-    implementation "io.ktor:ktor-client-content-negotiation:$ktor_version"
-    implementation "io.ktor:ktor-client-core:$ktor_version"
-    implementation "io.ktor:ktor-client-android:$ktor_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.10.0"
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0"
+    implementation "com.squareup.retrofit2:converter-scalars:$retrofitVersion"
     testImplementation "io.kotlintest:kotlintest-runner-junit5:3.4.2"
-    testImplementation 'junit:junit:4.13.2'
-
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
