--- a/AndroidApp/app/build.gradle
+++ b/AndroidApp/app/build.gradle
@@ -107,7 +107,7 @@ protobuf {
         }
     }
 }
-
+//
 //openApiGenerate {
 //    globalProperties = [
 //            supportingFiles: "",
@@ -116,7 +116,7 @@ protobuf {
 //    ]
 //    inputSpec = "$rootDir/../Documentation/WebApi/weather-cam-web-api.yaml".toString()
 //    generatorName = "kotlin"
-//    outputDir = "$rootDir/libapi"
+//    outputDir = "$rootDir/generated"
 //    modelPackage = "com.example.weatherapi.data.entities"
 //    apiPackage = "com.example.weatherapi.data.api"
 //    modelNameSuffix = "Entity"
