--- a/WebAPI/composer.json
+++ b/WebAPI/composer.json
@@ -1,15 +1,20 @@
 {
-    "autoload": {
-        "classmap": [
-            "src/"
-        ]
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^9"
-    },
+  "autoload": {
+    "classmap": [
+      "src/"
+    ]
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9"
+  },
   "require": {
     "ext-mysqli": "*",
     "ext-json": "*",
     "lcobucci/jwt": "^4.2"
+  },
+  "config": {
+    "platform": {
+      "php": "7.4"
+    }
   }
 }
